--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: instagram-gemini-bot
+    name: instagram-ai-bot
     env: node
     buildCommand: npm install
     startCommand: npm start
@@ -8,3 +8,4 @@ services:
       - key: NODE_ENV
         value: production
     healthCheckPath: /
+    autoDeploy: true
