--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Environment variables
+# Environment
 .env
 .env.local
 .env.production
 
-# Node.js
+# Node
 node_modules/
 npm-debug.log*
 yarn-debug.log*
